// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketHeaderWrapper/> should hide history button when on a new ticket and not render separator 1`] = `
<div>
  <div
    class="headerContainer"
  >
    <div>
      TicketHeader
    </div>
    <div>
      TicketFields
    </div>
    <div
      class="viewersBanner hidden"
    />
  </div>
</div>
`;

exports[`<TicketHeaderWrapper/> should render history button, ticket header and separator, and ticket fields 1`] = `
<div>
  <div
    class="headerContainer"
  >
    <div>
      TicketHeader
    </div>
    <div>
      TicketFields
    </div>
    <div
      class="viewersBanner hidden"
    />
  </div>
  <div
    style="height: 8px;"
  />
</div>
`;
